BPER/DEVF/force-app/main/default/objects/CampaignSettings__c/CampaignSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Campaign Settings</label>
</CustomObject>