BPER/DEVF/force-app/main/default/objects/CampaignSettings__c/fields/GenesysCallerAddress__c.field-meta.xml
<CustomField>
    <fullName>GenesysCallerAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Caller Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>