BPER/DEVF/force-app/main/default/objects/CampaignSettings__c/fields/GenesysCallerName__c.field-meta.xml
<CustomField>
    <fullName>GenesysCallerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Caller Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>