BPER/DEVF/force-app/main/default/objects/CampaignSettings__c/fields/GenesysCustomFields__c.field-meta.xml
<CustomField>
    <fullName>GenesysCustomFields__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Custom Fields</label>
    <type>TextArea</type>
</CustomField>