BPER/DEVF/force-app/main/default/objects/CampaignSettings__c/fields/GenesysDefaultQueueName__c.field-meta.xml
<CustomField>
    <fullName>GenesysDefaultQueueName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Default Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>