BPER/DEVF/force-app/main/default/objects/CampaignSettings__c/fields/GenesysDefaultScriptName__c.field-meta.xml
<CustomField>
    <fullName>GenesysDefaultScriptName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Default Script Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>